welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:22: error: ';' expected but 'for' found.
} for (tour<- 1 to 3) { faireV }  }
  ^