welcome.lessons.welcome.methods.picture.PictureMono.scala.code
override def run() {
def faireV() {
avance()
baisseBrosse()
leveBrosse()
gauche()
avance()
droite()
avance()
baisseBrosse()
leveBrosse()
droite()
avance()
droite()
avance()
baisseBrosse()
leveBrosse()
gauche()


} for (tour<- 1 to 3) { faireV }  }
